--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.19",
+    "i18n-iso-countries": "^7.14.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.12.31",
