--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "16.0.7",
     "next-intl": "^4.5.8",
     "react": "19.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
