--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.2",
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.19",
     "i18n-iso-countries": "^7.14.0",
