--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-to-print": "^3.2.0",
     "recharts": "^3.5.1",
     "swiper": "^12.0.3",
     "zustand": "^5.0.9"
